--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.10",
     "handlebars-helpers": "^0.8.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.4"
+  },
+  "devDependencies": {
     "nodemon": "^1.18.7"
   },
   "scripts": {
